# DexDiff

app/: build.gradle
app/src/androidTest/java/com/example/dexdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/example/dexdiff/: BsPatchUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
crashdemo/: build.gradle
crashdemo/log/: c17d9698-54e6-41f1-81917fb2-5c05a099.dmp  crash.txt
crashdemo/src/main/: AndroidManifest.xml
crashdemo/src/main/cpp/: CMakeLists.txt  bugly.cpp
crashdemo/src/main/cpp/breakpad/: CMakeLists.txt
crashdemo/src/main/java/com/example/crashdemo/: CrashReport.java  MainActivity.java  MyApplication.java
crashdemo/src/main/java/com/example/crashdemo/javacrash/: CrashHandler.java
